--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>scenic routes [.]</title>
+  <title>scenic routes [...]</title>
 </head>
 <body>
   <p style="text-align: center">scenic routes coming soon</p>
